added database service for user details (with dummy admin and user accounts) added oauth with facebook and google - external accounts not stored in database. added unauth context for register and reset password page)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,8 @@ logging.level.org.atmosphere = warn
 # To improve the performance during development. 
 # For more information https://vaadin.com/docs/v14/flow/spring/tutorial-spring-configuration.html#special-configuration-parameters
 # vaadin.whitelisted-packages= org/vaadin/example
+
+spring.security.oauth2.client.registration.facebook.client-id: ${OAUTH_FACEBOOK_CLIENT_ID:my_app_id}
+spring.security.oauth2.client.registration.facebook.client-secret:${OAUTH_FACEBOOK_CLIENT_SECRET:my_secret}
+spring.security.oauth2.client.registration.google.client-id: ${OAUTH_GOOGLE_CLIENT_ID:my_app_id}
+spring.security.oauth2.client.registration.google.client-secret:${OAUTH_GOOGLE_CLIENT_SECRET:my_secret}
